--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ edition = "2018"
 reqwest = { version = "0.10", features = ["json"] }
 serde_json = "1.0"
 tokio = { version = "0.2", features = ["macros"] }
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 error-chain = "0.12.4"
+serde = { version = "1.0", features = ["derive"] }
